# pybelief

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: combination-rules.md  decision-making.md  distances-and-comparisons.md  mass-function.md  utilities-and-io.md
examples/: basic_usage.py  combination_rules.py  decision_making.py  display_and_export.py  distances_and_comparisons.py
src/pybelief/: __init__.py  combination.py  decision.py  display.py  distances.py  mass.py
tests/: test_combination.py  test_decision.py  test_display.py  test_distances.py  test_mass.py
